Fix overflow issue for smaller screen sizes

--- a/app/(elements)/(Contact)/Contact.module.scss
+++ b/app/(elements)/(Contact)/Contact.module.scss
@@ -1,7 +1,7 @@
 .contactContainer {
-    @apply min-h-screen bg-spaceblack;
+    @apply h-screen bg-spaceblack;
     @apply px-16;
-    @apply py-24;
+    @apply py-12 xs:py-24;
     @apply flex flex-col items-center justify-between;
 }
 
@@ -10,17 +10,17 @@
     @apply flex flex-col items-center justify-center gap-y-8;
 
     .contactHeader {
-        @apply text-5xl;
+        @apply text-4xl xs:text-5xl;
         @apply font-bold;
     }
 
     .contactDescription {
         @apply text-center;
-        @apply text-2xl;
+        @apply text-xl xs:text-2xl;
     }
 
     .contactLocations {
-        @apply flex flex-col items-center gap-6 lg:flex-row lg:gap-12;
+        @apply flex flex-col items-center gap-3 xs:gap-6 lg:flex-row lg:gap-12;
     }
 }
 
@@ -30,11 +30,11 @@
 
     .contactCopyright {
         @apply text-center;
-        @apply text-3xl;
+        @apply text-2xl xs:text-3xl;
     }
 
     .contactAttribution {
         @apply text-center;
-        @apply text-6xl;
+        @apply text-4xl xs:text-6xl;
     }
 }
