--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -2,26 +2,18 @@
     @apply flex flex-col items-center justify-center;
     @apply border-4 border-white;
 
-    width: 10rem;
-    height: 3.5rem;
+    @apply w-[8rem] xs:w-[10rem];
+    @apply h-[3rem] xs:h-[3.5rem];
 
-    a {
-        @apply text-xl uppercase text-white;
-        letter-spacing: 0.15rem;
-
-        transition: all 0.3s ease-in-out;
-    }
+    @apply text-base xs:text-xl uppercase text-white;
+    letter-spacing: 0.15rem;
 
     transition: all 0.3s ease-in-out;
-
     &:hover {
-        box-shadow: 0 0 25px 3px rgba(255, 255, 255, 0.2);
-        width: 12rem;
+        @apply w-[10rem] xs:w-[12rem];
+        @apply bg-white text-spaceblack;
 
-        @apply bg-white;
-        a {
-            letter-spacing: 0.35rem;
-            @apply text-spaceblack;
-        }
+        box-shadow: 0 0 25px 3px rgba(255, 255, 255, 0.2);
+        letter-spacing: 0.35rem;
     }
 }
